--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mysql:
     image: mysql:9.5
+    container_name: mysql-db  # Giving it a fixed name makes it easier
     ports:
       - "3306:3306"
     environment:
@@ -11,11 +12,22 @@ services:
       - MYSQL_DATABASE=petclinic
     volumes:
       - "./conf.d:/etc/mysql/conf.d:ro"
-  postgres:
-    image: postgres:18.1
+  app:
+    image: java-petclinic:latest
     ports:
-      - "5432:5432"
+      - "8080:8080"
     environment:
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_USER=petclinic
-      - POSTGRES_DB=petclinic
+      - SPRING_PROFILES_ACTIVE=mysql
+      # We use 'mysql-db' here because it matches the container_name above
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3306/petclinic
+    depends_on:
+      - mysql    
+  
+  #postgres:
+  #  image: postgres:18.1
+  #  ports:
+  #    - "5432:5432"
+  #  environment:
+  #    - POSTGRES_PASSWORD=petclinic
+  #    - POSTGRES_USER=petclinic
+  #    - POSTGRES_DB=petclinic
